--- a/LibraryInject/LibraryInject.vcxproj.filters
+++ b/LibraryInject/LibraryInject.vcxproj.filters
@@ -50,7 +50,7 @@
     <ClCompile Include="ImGuiManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="WinApiManager.cpp">
+    <ClCompile Include="WinApiHelper.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="main.cpp">
@@ -94,7 +94,7 @@
     <ClInclude Include="ImGuiManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="WinApiManager.h">
+    <ClInclude Include="WinApiHelper.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Hook.h">
