--- a/LibraryInject/LibraryInject.vcxproj
+++ b/LibraryInject/LibraryInject.vcxproj
@@ -154,6 +154,8 @@
   <ItemGroup>
     <ClCompile Include="CoDUO.cpp" />
     <ClCompile Include="Detours_CoDUO.cpp" />
+    <ClCompile Include="Detours_OpenGL.cpp" />
+    <ClCompile Include="Detours_WinAPI.cpp" />
     <ClCompile Include="Hook.cpp" />
     <ClCompile Include="ImGuiManager.cpp" />
     <ClCompile Include="ImGui\imgui.cpp" />
@@ -170,6 +172,7 @@
     <ClInclude Include="CoDUO.h" />
     <ClInclude Include="coduo_structs.h" />
     <ClInclude Include="Detours.h" />
+    <ClInclude Include="Detours_defines.h" />
     <ClInclude Include="Hook.h" />
     <ClInclude Include="ImGuiManager.h" />
     <ClInclude Include="ImGui\imconfig.h" />
