world to screen

--- a/LibraryInject/LibraryInject.vcxproj.filters
+++ b/LibraryInject/LibraryInject.vcxproj.filters
@@ -133,5 +133,8 @@
     <ClInclude Include="coduo_structs.h">
       <Filter>Structs</Filter>
     </ClInclude>
+    <ClInclude Include="Vector3.h">
+      <Filter>Structs</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
