--- a/LibraryInject/LibraryInject.vcxproj
+++ b/LibraryInject/LibraryInject.vcxproj
@@ -187,6 +187,7 @@
     <ClInclude Include="ImGui\imstb_textedit.h" />
     <ClInclude Include="ImGui\imstb_truetype.h" />
     <ClInclude Include="OpenGLHelper.h" />
+    <ClInclude Include="Vector3.h" />
     <ClInclude Include="WinApiHelper.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
