on projectile bounce callback

--- a/LibraryInject/LibraryInject.vcxproj
+++ b/LibraryInject/LibraryInject.vcxproj
@@ -104,7 +104,7 @@
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <AdditionalIncludeDirectories>C:\Users\Jakub\source\repos\LibraryInject\LibraryInject\Lua542\include;C:\Users\Jakub\source\repos\LibraryInject\LibraryInject\ImGui\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <WholeProgramOptimization>false</WholeProgramOptimization>
+      <WholeProgramOptimization>true</WholeProgramOptimization>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -113,6 +113,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>C:\Users\Jakub\source\repos\LibraryInject\LibraryInject\Lua542</AdditionalLibraryDirectories>
       <AdditionalDependencies>liblua54.a;%(AdditionalDependencies)</AdditionalDependencies>
+      <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
