--- a/LibraryInject/LibraryInject.vcxproj
+++ b/LibraryInject/LibraryInject.vcxproj
@@ -105,6 +105,7 @@
       <LanguageStandard>stdcpplatest</LanguageStandard>
       <AdditionalIncludeDirectories>C:\Users\Jakub\source\repos\LibraryInject\LibraryInject\Lua542\include;C:\Users\Jakub\source\repos\LibraryInject\LibraryInject\ImGui\;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <WholeProgramOptimization>true</WholeProgramOptimization>
+      <LanguageStandard_C>stdc17</LanguageStandard_C>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
