--- a/LibraryInject/LibraryInject.vcxproj
+++ b/LibraryInject/LibraryInject.vcxproj
@@ -169,6 +169,7 @@
     <ClCompile Include="ImGui\imgui_impl_win32.cpp" />
     <ClCompile Include="ImGui\imgui_tables.cpp" />
     <ClCompile Include="ImGui\imgui_widgets.cpp" />
+    <ClCompile Include="LuaState.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="OpenGLHelper.cpp" />
     <ClCompile Include="WinApiHelper.cpp" />
@@ -190,6 +191,7 @@
     <ClInclude Include="ImGui\imstb_rectpack.h" />
     <ClInclude Include="ImGui\imstb_textedit.h" />
     <ClInclude Include="ImGui\imstb_truetype.h" />
+    <ClInclude Include="LuaState.h" />
     <ClInclude Include="OpenGLHelper.h" />
     <ClInclude Include="vec3_t.h" />
     <ClInclude Include="WinApiHelper.h" />
