--- a/LibraryInject/LibraryInject.vcxproj.filters
+++ b/LibraryInject/LibraryInject.vcxproj.filters
@@ -83,6 +83,9 @@
     <ClCompile Include="CoDUO_Callbacks.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="LuaState.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ImGui\imstb_truetype.h">
@@ -140,6 +143,9 @@
       <Filter>Structs</Filter>
     </ClInclude>
     <ClInclude Include="CoDUO_Callbacks.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LuaState.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
