--- a/CoDPlusPlus/CoDPlusPlus.vcxproj
+++ b/CoDPlusPlus/CoDPlusPlus.vcxproj
@@ -97,11 +97,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CoDUO.cpp" />
+    <ClCompile Include="CvarMapping.cpp" />
     <ClCompile Include="Detours_CoDUO.cpp" />
     <ClCompile Include="Detours_OpenGL.cpp" />
     <ClCompile Include="Detours_WinAPI.cpp" />
-    <ClCompile Include="GscFunctions.cpp" />
-    <ClCompile Include="GscMethods.cpp" />
+    <ClCompile Include="GscFunctionExt.cpp" />
+    <ClCompile Include="GscMapping.cpp" />
+    <ClCompile Include="GscMethodExt.cpp" />
     <ClCompile Include="Hook.cpp" />
     <ClCompile Include="ImGuiManager.cpp" />
     <ClCompile Include="ImGui\imgui.cpp" />
@@ -114,6 +116,8 @@
     <ClCompile Include="LuaState.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="OpenGLHelper.cpp" />
+    <ClCompile Include="StringUtilsMapping.cpp" />
+    <ClCompile Include="WeaponMapping.cpp" />
     <ClCompile Include="WinApiHelper.cpp" />
   </ItemGroup>
   <ItemGroup>
